add jiffy, yamler

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,8 @@
 {deps, [
+    {yamler, "1",
+      {git, "https://github.com/superbobry/yamler.git", "master"}},
     {cowboy, ".*",
-        {git, "git://github.com/extend/cowboy.git", "master"}}
+      {git, "git://github.com/extend/cowboy.git", "master"}},
+    {jiffy, ".*",
+      {git, "git://github.com/davisp/jiffy.git", {branch, "master"}}}
 ]}.
